--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "jwt-decode": "^3.1.2",
     "less-loader": "^4.0.3",
     "qs": "^6.10.3",
+    "sass-loader": "^7.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-swatches": "^2.1.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0",
     "webpack": "^2.3.3"
   },
@@ -30,6 +32,7 @@
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
+    "node-sass": "^7.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
